<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/most_popular_movies"
                android:textAppearance="@style/MainTitleTextAppearance" />

            <Button
                android:id="@+id/btn_popular"
                style="@style/MainButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today_at_the_cinema"
                android:textAppearance="@style/MainTitleTextAppearance" />

            <Button
                android:id="@+id/btn_today"
                style="@style/MainButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>