<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data class="MainMovieBinding">

        <import
            alias="V"
            type="android.view.View" />

        <variable
            name="popular"
            type="com.github.rkhusainov.moviefan.presentation.ui.popular.viewmodel.PopularMovieViewModel" />

        <variable
            name="today"
            type="com.github.rkhusainov.moviefan.presentation.ui.today.viewmodel.TodayMovieViewModel" />

        <variable
            name="top"
            type="com.github.rkhusainov.moviefan.presentation.ui.top.viewmodel.TopMovieViewModel" />

        <variable
            name="upcoming"
            type="com.github.rkhusainov.moviefan.presentation.ui.upcoming.viewmodel.UpcomingMovieViewModel" />

        <variable
            name="onItemClickListener"
            type="com.github.rkhusainov.moviefan.presentation.common.OnItemClickListener" />

        <variable
            name="handler"
            type="com.github.rkhusainov.moviefan.presentation.ui.main.MainFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{popular.isLoading? V.VISIBLE : V.GONE}" />

        <ScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{popular.isErrorVisible ? V.GONE : V.VISIBLE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorGray"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:paddingEnd="@dimen/default_padding"
                            android:text="@string/most_popular_movies"
                            android:textAppearance="@style/MainTitleTextAppearance" />

                        <Button
                            android:id="@+id/btn_popular"
                            style="@style/MainButtonBorderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(v)->handler.openFragment(v)}"
                            android:text="@string/see_all" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_popular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        bind:clickHandler="@{popular.liveDataOnItemClickListener}"
                        bind:dataPopular="@{popular.movies}"
                        bind:viewType="@{popular.viewType}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorGray"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:paddingEnd="@dimen/default_padding"
                            android:text="@string/today_at_the_cinema"
                            android:textAppearance="@style/MainTitleTextAppearance" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        bind:clickHandler="@{today.liveDataOnItemClickListener}"
                        bind:data="@{today.movies}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorGray"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:paddingEnd="@dimen/default_padding"
                            android:text="@string/coming_soon"
                            android:textAppearance="@style/MainTitleTextAppearance" />

                        <Button
                            android:id="@+id/btn_upcoming"
                            style="@style/MainButtonBorderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(v)->handler.openFragment(v)}"
                            android:text="@string/see_all" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        bind:clickHandler="@{upcoming.liveDataOnItemClickListener}"
                        bind:dataUpcoming="@{upcoming.movies}"
                        bind:viewType="@{upcoming.viewType}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorGray"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/default_padding"
                            android:paddingTop="@dimen/default_padding"
                            android:paddingEnd="@dimen/default_padding"
                            android:text="@string/top_rated_movies"
                            android:textAppearance="@style/MainTitleTextAppearance" />

                        <Button
                            android:id="@+id/btn_top"
                            style="@style/MainButtonBorderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(v)->handler.openFragment(v)}"
                            android:text="@string/see_all" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        bind:clickHandler="@{top.liveDataOnItemClickListener}"
                        bind:dataTop="@{top.movies}"
                        bind:viewType="@{top.viewType}" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <include
            layout="@layout/error_view"
            android:visibility="@{popular.isErrorVisible ? V.VISIBLE : V.GONE}" />

    </LinearLayout>

</layout>





